ejercicio con if else de edades

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <body>
        <h1> Hola Mundo</h1> 
 
-       <script src="app.js"></script>
+       <script src="edades.js"></script>
     </body>
 </html>
